NBWChat/default/nbchat30.css
/* ... */
.sendbuttonsb { position:absolute;bottom:7px;right:11px; }
.sendbuttonsb img { height:25px;width:65px; }
.WhisperPane {z-index:3;position:relative;display:inline-block;white-space: nowrap;word-wrap: break-word;word-break: break-all;overflow-x: scroll;width:100%;max-width:100%;text-align: justify;white-space: normal !important;height:100%;padding:0;margin:5px 0 0 0;}
.whisploading { position:fixed;top:20px;color:#333;font-size:14px;z-index:3; }
/* Footer */
#footerinfo { position:absolute;bottom:3px;height:20px;left:10px;right:10px;color:white;font-size:13px;}
/* Chat Content */
.linebreakindenter { overflow:hidden;position: relative; }
.emotestyle { display:inline-block; }
.cpnicklocaluser { color:#000000; font-weight: bold; padding-left: 3px; }
.cpnicktaggedlocaluser { color:#330066; font-weight: bold; padding-left: 3px; }
.cpnickawaylocaluser { color:Gray; font-weight: bold; padding-left: 3px; }
.cpnickuser { color:#000099; padding-left: 3px; }
.cpnicktaggeduser { color:#fff; font-weight: bold; padding:0 8px 2px 8px; background-color:#2F8EC3 !important;-webkit-border-radius: 8px;-moz-border-radius: 8px;border-radius: 8px; }
.cpnickawayuser { color:Gray; padding-left: 3px; }
.fc20wwuserlb { color:#fff; font-weight: bold;font-size:15px; }
.msgfrmt2 { color:#0000CC; } /* used in: reconnect message */
.errortype1 { color:#FF0000; }
.topicparent { padding-left: 30px; height: 10px; }
.pretopiclabel { color:#000000; font-weight: bold; }
.topic { color:#396693; }
.onjoinparent { padding-left: 30px; height: 20px; position: relative; top: 1px; }
.preonjoinlabel { color:#339933; font-weight: bold; }
.onjoin { color: #339933; font-weight: bold; }
.msgfrmtparent { padding-left: 50px; }
.msgfrmt4 { color:#8B8682; } /* used in: prop_language2, onjoin, onNoticePrivate */
.msgfrmt4 .usernickclick { color: #8B8682 !important; }
.msgfrmt4me { color:#8B8682; font-weight: normal; } /* used in: onjoin_localuser */
.msgfrmt5 { color:black; } /* used as parent formatter in: onNotice */
.broadcasttitlecr { color:#FF0000; font-weight: bold; padding-top: 10px; }
.broadcasttitlesrv { color:#FF0000; font-weight: bold; padding-top: 10px; }
.broadcastmsg { color:#000000; padding-bottom: 10px; padding-left: 18px; height: 10px; }
.servnotice { color:#8B8682; font-weight: normal; }
.kicked { color:#FF0000; font-weight: bold; }
.kickedme { color:#FF0000; font-weight: bold; }
.nickchange { color: #0099FF; }
.nickchangeme { color: #0099FF; font-weight: normal; }
.modechange { color: #698B69; }
.modechangeme { color: #698B69; }
.knock { color: #800000; font-weight: bold; }
.invite { color: #8B008B; font-weight: bold; }
.whispreq { background-color: #F1F4FA; border: solid 1px #CCCCCC; text-indent: 1em; margin: 2px; padding 5px; }
.whispreq-tab { display:inline;color:#666; }
.titlenotice { } /* used in: onNotice */
.msgnotice { } /* used in: onNotice */
.titlenoticepr { } /* used in: onNotice personal */
.msgnoticepr { } /* used in: onNotice personal */
.emothead { background-color:#2C658A;color:white;font-weight:bold;font-size:13px;padding:3px; }
.actiontext {  font-style:italic; color: #9C009C; }
.actiontext .usernickclick { font-style:italic !important; color: #9C009C !important; }
.move { cursor: move;width:100px; }
.timestamp { color:grey;font-family:'Courier New'; }
.timeline { 
font-weight:bold;color:grey;font-family:'Courier New';
text-align:center;
margin-bottom:5px; 
border:1px dashed #C5C5C5;
-webkit-border-radius: 8px;
-moz-border-radius: 8px;
border-radius: 8px;
background-color:#EBEBEB;
margin-top:10px;
margin-right:10px;

}
.awaymsgabouttext { text-align:center;font-size:14px;font-weight:bold;padding:0 0 5px 0; }
.whisper-hasleft { color:red; }
.titlenoticepr { font-weight:bold;color:#804040; }
.msgnoticepr { color:#804040; }

